Added configuration to avoid JVM warnings during execution